Skip to content
New issue

Have a question about this project? Sign up for a free GitHub account to open an issue and contact its maintainers and the community.

By clicking “Sign up for GitHub”, you agree to our terms of service and privacy statement. We’ll occasionally send you account related emails.

Already on GitHub? Sign in to your account

[SR-9008] Can't optimize away reworked string interpolation in a Void context on Linux #51511

Open
beccadax opened this issue Oct 16, 2018 · 3 comments
Labels
bug A deviation from expected or documented behavior. Also: expected but undesirable behavior. compiler The Swift compiler in itself

Comments

@beccadax
Copy link
Contributor

Previous ID SR-9008
Radar rdar://problem/45294605
Original Reporter @beccadax
Type Bug
Additional Detail from JIRA
Votes 0
Component/s Compiler
Labels Bug
Assignee None
Priority Medium

md5: 01744141a6715d266b88b8727cce77a4

Issue Description:

Post-SE-0228, the function string_interpolation() in test/SILOptimizer/unused_containers.swift does not optimize down to an empty function on the Linux CI. The test still passes on Darwin.

@milseman
Copy link
Mannequin

milseman mannequin commented Oct 16, 2018

@swift-ci create

@swift-ci
Copy link
Collaborator

Comment by Ravichandhran Kandhadai Madhavan (JIRA)

Was there any further insight into this issue? I was wondering what are the dead instructions that weren't eliminated.

@beccadax
Copy link
Contributor Author

Something like it may actually be happening on Darwin, because the DeadArray benchmark (which also has a string interpolation whose result is unused) is one of the ones doing worst in the branch. Once we've got that issue licked, I wouldn't be surprised to see the XFAILed test start working again on Linux.

@swift-ci swift-ci transferred this issue from apple/swift-issues Apr 25, 2022
Sign up for free to join this conversation on GitHub. Already have an account? Sign in to comment
Labels
bug A deviation from expected or documented behavior. Also: expected but undesirable behavior. compiler The Swift compiler in itself
Projects
None yet
Development

No branches or pull requests

2 participants