lib/Sema/ConstraintSystem.h
@@ -2297,12 +2297,6 @@ public:
   /// \returns a possibly-sanitized expression, or null if an error occurred.
   Expr *generateConstraints(Expr *E);
 
-  /// \brief Generate constraints for the given top-level expression,
-  /// assuming that its children are already type-checked.
-  ///
-  /// \returns a possibly-sanitized expression, or null if an error occurred.
-  Expr *generateConstraintsShallow(Expr *E);
-
   /// \brief Generate constraints for binding the given pattern to the
   /// value of the given expression.
   ///
@@ -3135,11 +3129,6 @@ public:
                       Type convertType, bool discardedExpr,
                       bool skipClosures);
 
-  /// \brief Apply a given solution to the expression to the top-level
-  /// expression, producing a fully type-checked expression.
-  Expr *applySolutionShallow(const Solution &solution, Expr *expr,
-                             bool suppressDiagnostics);
-  
   /// \brief Reorder the disjunctive clauses for a given expression to
   /// increase the likelihood that a favored constraint will be successfully
   /// resolved before any others.
